# task02---zoo-sychev27

./: README.md
ZooProject/: CMakeLists.txt
ZooProject/include/: Animal.h  CMakeLists.txt  Dog.h  Lion.h  Location.h  Owl.h  Zoo.h
ZooProject/src/: Animal.cpp  CmakeLists.txt  Dog.cpp  Lion.cpp  Location.cpp  Owl.cpp  Zoo.cpp  ZooProject.cpp
